--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
             <div class="download-container">
                 <div class="github-releases fade-in delay-1">
                     <h3>GitHub Releases</h3>
-                    <span class="version-badge">Version</span>
+                    <span class="version-badge">Versions</span>
                     <p>All releases are available on our GitHub repository. Click below to access the latest builds and previous versions.</p>
                     <a href="https://github.com/dev-Ali2008/xanite/releases" target="_blank" class="btn">
                         <i class="fab fa-github"></i> View on GitHub
