--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
                         <i class="fas fa-gamepad"></i>
                     </div>
                     <h3>Gamepad Support</h3>
-                    <p>Full support for Bluetooth and USB controllers like ps4-3 and xbox joysticks</p>
+                    <p>Full support for Bluetooth and USB controllers like PS4, PS3, and Xbox joystick </p>
                 </div>
                 
                 <div class="feature-card fade-in delay-3">
