--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
         .nav-links li {
             margin-left: 30px;
         }
+
+        
+.logo-image {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.logo-image img {
+    max-width: 150px;  
+    height: auto;
+    border-radius: 50%;  
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
         
         .nav-links a {
             color: white;
