--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
         }
         
         body {
-            background-color: var(--darker-bg);
-            color: var(--light-text);
-            line-height: 1.6;
-            background-image: 
-                linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-                url('https://github.com/dev-Ali2008/Xanite.io/blob/c2b40d777b0cb67359e4a229369a482bd1b49960/IMG_20250729_102617_388.jpg?raw=true');
-            background-size: cover;
-            background-attachment: fixed;
-            background-position: center;
+    background-color: var(--darker-bg);
+    color: var(--light-text);
+    line-height: 1.6;
+    background-image: 
+        linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url('https://github.com/dev-Ali2008/Xanite.io/blob/c2b40d777b0cb67359e4a229369a482bd1b49960/IMG_20250729_102617_388.jpg?raw=true');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-blend-mode: multiply;
         }
         
         .container {
