--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                         <i class="fas fa-tachometer-alt"></i>
                     </div>
                     <h3>Performance</h3>
-                    <p>Optimized for Android devices with Software support for performance and compatibility.</p>
+                    <p>Optimized for Android devices with Software support, performance and compatibility.</p>
                 </div>
                 
                 <div class="feature-card fade-in delay-2">
@@ -706,7 +706,7 @@
                         <i class="fas fa-gamepad"></i>
                     </div>
                     <h3>Gamepad Support</h3>
-                    <p>Full support for Bluetooth and USB controllers like PS4, PS3, and Xbox joystick</p>
+                    <p>Full support for Bluetooth and USB controllers like Playstation, Xbox and more</p>
                 </div>
                 
                 <div class="feature-card fade-in delay-3">
@@ -714,7 +714,7 @@
                         <i class="fas fa-image"></i>
                     </div>
                     <h3>HD Graphics</h3>
-                    <p>Enhanced resolution and texture filtering for improved visual quality on modern devices.</p>
+                    <p>Enhanced resolution and texture filtering for improved visual quality.</p>
                 </div>
             </div>
         </div>
