--- a/index.html
+++ b/index.html
@@ -597,6 +597,7 @@
                 <li><a href="#compatibility"><i class="fas fa-check-circle"></i> Compatibility</a></li>
                 <li><a href="#features"><i class="fas fa-star"></i> Features</a></li>
                 <li><a href="#social"><i class="fas fa-share-alt"></i> Community</a></li>
+                 <li><a href="faq.html"><i class="fas fa-question-circle"></i> FAQ</a></li> 
             </ul>
             <button class="mobile-menu-btn" id="mobileMenuBtn">
                 <i class="fas fa-bars"></i>
@@ -759,7 +760,7 @@
             <ul class="footer-links">
                 <li><a href="#"><i class="fas fa-shield-alt"></i> Privacy Policy</a></li>
                 <li><a href="#"><i class="fas fa-file-contract"></i> Terms of Service</a></li>
-                <li><a href="#"><i class="fas fa-question-circle"></i> FAQ</a></li>
+              <li><a href="faq.html"><i class="fas fa-question-circle"></i> FAQ</a></li> 
                 <li><a href="#"><i class="fas fa-envelope"></i> Contact</a></li>
             </ul>
             <p class="copyright">© 2024 Xanite Emulator Project. All rights reserved.</p>
