--- a/faq.html
+++ b/faq.html
@@ -323,7 +323,7 @@
                         <i class="fas fa-chevron-right"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>Yes! there will be two versions Xanite free and Xanite gold </strong>, .</p>
+                        <p>Yes! there will <strong> be two versions Xanite and Xanite gold </strong>, .</p>
                     </div>
                 </div>
                 
@@ -345,7 +345,7 @@
                         <i class="fas fa-chevron-right"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>No. You must <strong>provide your own game files </strong>. Xanite does <strong>not include any games</strong>.</p>
+                        <p>No You must <strong>provide your own game files </strong>. Xanite does <strong>not include any games</strong>.</p>
                     </div>
                 </div>
                 
