--- a/faq.html
+++ b/faq.html
@@ -323,7 +323,7 @@
                         <i class="fas fa-chevron-right"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>Yes! there will <strong> be two versions Xanite and Xanite gold </strong>, .</p>
+                        <p>Yes! Xanite will offer two versions: a free version and a premium version called Xanite Gold</strong>.</p>
                     </div>
                 </div>
                 
