--- a/faq.html
+++ b/faq.html
@@ -345,7 +345,7 @@
                         <i class="fas fa-chevron-right"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>No. You must <strong>provide your own game files. </strong> Xanite does <strong>not include any games</strong>.</p>
+                        <p>No. Xanite does <strong>not</ strong> come with any games. You must provide your own legally-owned game files.
                     </div>
                 </div>
                 
