--- a/faq.html
+++ b/faq.html
@@ -323,7 +323,11 @@
                         <i class="fas fa-chevron-right"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>Yes! Xanite will offer two versions: a free version and a premium version called Xanite Gold. </strong>, .</p>
+                        <p>Yes! Xanite will offer two
+
+versions: a free version and a premium version called <strong>Xanite Gold</strong>.</p>
+
+</details>
                     </div>
                 </div>
                 
