--- a/faq.html
+++ b/faq.html
@@ -325,9 +325,7 @@
                     <div class="faq-answer">
                         <p>Yes! Xanite will offer two
 
-versions: a free version and a premium version called <strong>Xanite Gold</strong>.</p>
-
-</details>
+versions: a free version and a premium version called <strong>Xanite Gold!</strong>.</p>
                     </div>
                 </div>
                 
