--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
                         <i class="fas fa-gamepad"></i>
                     </div>
                     <h3>Gamepad Support</h3>
-                    <p>Full support for Bluetooth and USB controllers like PS4, PS3, and Xbox joystick</p>
+                    <p>Full support for Bluetooth and USB controllers like playstation, Xbox controllers and more</p>
                 </div>
                 
                 <div class="feature-card fade-in delay-3">
@@ -716,7 +716,7 @@
                         <i class="fas fa-image"></i>
                     </div>
                     <h3>HD Graphics</h3>
-                    <p>Enhanced resolution and texture filtering for improved visual quality on modern devices.</p>
+                    <p>Enhanced resolution and texture filtering for improved visual quality.</p>
                 </div>
             </div>
         </div>
