--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@
 }
         
          .nav-links a {
-                padding: 10px 0;
-                font-size: 1.1rem;
+        color: white;
+        text-decoration: none;
+        display: flex;
+        align-items: center;
          }
         
         .nav-links a i {
