--- a/faq.html
+++ b/faq.html
@@ -420,4 +420,4 @@ versions: a free version and a premium version called <strong>Xanite Gold!</stro
         });
     </script>
 </body>
-</html>https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css6666661212122525250555555360https://github.com/dev-Ali2008/xanitehttps://discord.gg/U5kytJ4dub2024
+</html>
