--- a/compatibility.html
+++ b/compatibility.html
@@ -271,7 +271,7 @@
                 status: "unknown", 
                 year: 2003, 
                 genre: "Racing",
-                image: "https://m.media-amazon.com/images/I/61J2AdImdIL._UF1000,1000_QL80_FMwebp_.jpg"
+                image: "https://en.m.wikipedia.org/wiki/File:Project_Gotham_Racing_2_Coverart.png"
             },
             { 
                 title: "Crimson Skies: High Road to Revenge", 
