--- a/compatibility.html
+++ b/compatibility.html
@@ -271,8 +271,7 @@
                 status: "unknown", 
                 year: 2003, 
                 genre: "Racing",
-                image: 
-"https://m.media-amazon.comimagesI61J2AdImdIL._UF1000,1000_QL80_FMwebp_.jpg"
+                image: "https://m.media-amazon.comimagesI61J2AdImdIL._UF1000,1000_QL80_FMwebp_.jpg"
             },
             { 
                 title: "Crimson Skies: High Road to Revenge", 
