--- a/compatibility.html
+++ b/compatibility.html
@@ -271,8 +271,7 @@
                 status: "unknown", 
                 year: 2003, 
                 genre: "Racing",
-                image: 
-"m.media-amazon.com/imagesI/61J2AdImdIL._UF1000,1000_QL80_FMwebp_.jpg"
+                image:         "m.media-amazon.com/imagesI/61J2AdImdIL._UF1000,1000_QL80_FMwebp_.jpg"
             },
             { 
                 title: "Crimson Skies: High Road to Revenge", 
