--- a/faq.html
+++ b/faq.html
@@ -384,18 +384,17 @@ versions: a free version and a premium version called <strong>Xanite Gold!</stro
         </div>
     </section>
     
-    <footer>
-        <div class="container">
-            <ul class="footer-links">
-                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="index.html#download"><i class="fas fa-download"></i> Download</a></li>
-                <li><a href="index.html#compatibility"><i class="fas fa-check-circle"></i> Compatibility</a></li>
-                <li><a href="faq.html"><i class="fas fa-question-circle"></i> FAQ</a></li>
-                <li><a href="#"><i class="fas fa-shield-alt"></i> Privacy</a></li>
-            </ul>
+     <footer class="fade-in">
+        <div class="c ontainer">
+        <ul class="footer-links">
+    <li><a href="privacy.html"><i class="fas fa-shield-alt"></i> Privacy Policy</a></li> <!-- عدل هذا السطر -->
+    <li><a href="#"><i class="fas fa-file-contract"></i> Terms of Service</a></li>
+    <li><a href="faq.html"><i class="fas fa-question-circle"></i> FAQ</a></li>
+    <li><a href="#"><i class="fas fa-envelope"></i> Contact</a></li>
+        </ul>
             <p class="copyright">© 2024 Xanite Emulator Project. All rights reserved.</p>
         </div>
-    </footer>
+     </footer>
     
     <script>
         // FAQ Accordion Functionality
