--- a/privacy.html
+++ b/privacy.html
@@ -274,16 +274,17 @@
         </div>
     </section>
 
-    <footer class="fade-in">
-    <div class="container">
+     <footer class="fade-in">
+        <div class="c ontainer">
         <ul class="footer-links">
-            <li><a href="privacy.html"><i class="fas fa-shield-alt"></i> Privacy Policy</a></li>
-            <li><a href="#"><i class="fas fa-file-contract"></i> Terms of Service</a></li>
-            <li><a href="faq.html"><i class="fas fa-question-circle"></i> FAQ</a></li>
-            <li><a href="#"><i class="fas fa-envelope"></i> Contact</a></li>
+    <li><a href="privacy.html"><i class="fas fa-shield-alt"></i> Privacy Policy</a></li> <!-- عدل هذا السطر -->
+    <li><a href="#"><i class="fas fa-file-contract"></i> Terms of Service</a></li>
+    <li><a href="faq.html"><i class="fas fa-question-circle"></i> FAQ</a></li>
+    <li><a href="#"><i class="fas fa-envelope"></i> Contact</a></li>
         </ul>
-        <p class="copyright">© 2024 Xanite Emulator Project. All rights reserved.</p>
-    </div>
+            <p class="copyright">© 2024 Xanite Emulator Project. All rights reserved.</p>
+        </div>
     </footer>
+      
 </body>
 </html>
