--- a/index.html
+++ b/index.html
@@ -931,6 +931,7 @@
 </div>
 
 <!-- Social Links Section -->
+<!-- Social Links Section -->
 <section id="social" class="social-links">
     <div class="container">
         <h2 class="section-title">Join Our Community</h2>
@@ -960,6 +961,15 @@
                 <h3>Telegram</h3>
                 <p>Get latest news</p>
                 <a href="https://t.me/xanite_xbox" target="_blank">t.me/xanite_xbox</a>
+            </div>
+            
+            <div class="social-card">
+                <div class="social-icon">
+                    <i class="fab fa-patreon fa-2x" style="color: #f96854;"></i>
+                </div>
+                <h3>Patreon</h3>
+                <p>Support our project</p>
+                <a href="https://www.patreon.com/Xanite_android" target="_blank">patreon.com/Xanite_android</a>
             </div>
         </div>
     </div>
