--- a/compatibility.html
+++ b/compatibility.html
@@ -226,14 +226,14 @@
             },
             { 
                 title: "Doom 3", 
-                status: "starts", 
+                status: "unknown", 
                 year: 2005, 
                 genre: "FPS",
                 image: "https://m.media-amazon.com/images/I/51NLiCfYFSL._UF1000,1000_QL80_FMwebp_.jpg"
             },
             { 
                 title: "Freedom Fighters", 
-                status: "intro", 
+                status: "unknown", 
                 year: 2003, 
                 genre: "Shooter",
                 image: "https://upload.wikimedia.org/wikipedia/en/5/5f/Freedom_Fighters_%28video_game_cover_art%29.jpg"
