--- a/faq.html
+++ b/faq.html
@@ -306,13 +306,11 @@
                 <div class="faq-item">
                     <div class="faq-question">
                         <i class="fas fa-question-circle"></i>
-                        <span>What consoles does it emulate?</span>
+                        <span>Does Xanite use Xbox codes from other emulators?</span>
                         <i class="fas fa-chevron-right"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>Xanite emulates:<br>
-                        - <strong>Original Xbox (2001)</strong><br>
-                        - <strong>Xbox 360 (2005)</strong></p>
+                        <p>No. Xanite is built from scratch for Android and doesn't reuse code from Xemu, Xenia, or others.<br>     
                     </div>
                 </div>
                 
@@ -332,11 +330,11 @@ versions: a free version and a premium version called <strong>Xanite Gold!</stro
                 <div class="faq-item">
                     <div class="faq-question">
                         <i class="fas fa-question-circle"></i>
-                        <span>Where can I download it?</span>
+                        <span>Is Xanite native or Termux-based?</span>
                         <i class="fas fa-chevron-right"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>You can download the latest version from the <a href="index.html#download">Downloads</a> section on our main page.</p>
+                        <p>Xanite is completely native and runs on Vulkan 1.1 and OpenGL 3.2, giving smooth and efficient graphics.</p>
                     </div>
                 </div>
                 
